--- a/src/layout/_header.scss
+++ b/src/layout/_header.scss
@@ -7,7 +7,7 @@
   color: $header-text-color;
   font-weight: bold;
   font-size: 2.5em;
-  padding: 0 1rem 0 0;
+  padding: 0;
   white-space: nowrap;
 }
 
